--- a/templates/index.hbs
+++ b/templates/index.hbs
@@ -1,8 +1,8 @@
 {{> content_top }}
-<div class="max-w-3xl mx-auto px-4 sm:px-6 lg:max-w-7xl lg:px-8">
+<div class="max-w-3xl px-4 mx-auto sm:px-6 lg:max-w-7xl lg:px-8">
     <h1 class="sr-only">Profile</h1>
     <!-- Main 3 column grid -->
-    <div class="grid grid-cols-1 gap-4 items-start lg:grid-cols-3 lg:gap-8">
+    <div class="grid items-start grid-cols-1 gap-4 lg:grid-cols-3 lg:gap-8">
         <!-- Left column -->
         <div class="grid grid-cols-1 gap-4 lg:col-span-2">
             <!-- Welcome panel -->
@@ -10,25 +10,25 @@
             <!-- Content panel -->
             <section aria-labelledby="content-title">
 
-                <div class="rounded-lg bg-white shadow pt-10 pb-20 px-4 sm:px-6 lg:pt-14 lg:pb-28 lg:px-8">
+                <div class="px-4 pt-10 pb-20 bg-white rounded-lg shadow sm:px-6 lg:pt-14 lg:pb-28 lg:px-8">
                     <div class="relative max-w-lg mx-auto divide-y-2 divide-gray-200 lg:max-w-7xl">
                         <div>
                             <h2 id="content-title"
-                                class="text-3xl tracking-tight font-extrabold text-gray-900 sm:text-4xl">Featured
+                                class="text-3xl font-extrabold tracking-tight text-gray-900 sm:text-4xl">Featured
                                 Articles</h2>
                             <div class="mt-3 sm:mt-4 lg:grid lg:grid-cols-2 lg:gap-5 lg:items-center">
                                 <p class="text-xl text-gray-500">These are the articles that are trending right now.</p>
 
                             </div>
                         </div>
-                        <div class="mt-6 pt-10 grid gap-16 lg:grid-cols-2 lg:gap-x-5 lg:gap-y-12">
+                        <div class="grid gap-16 pt-10 mt-6 lg:grid-cols-2 lg:gap-x-5 lg:gap-y-12">
 
                             {{#each (blogs site.pages)}}
                                 <div>
                                     <p class="text-sm text-gray-500">
-                                        <time datetime="2020-03-10">Mar 10, 2020</time>
+                                        <time datetime="2020-03-10">Mar 11, 2020</time>
                                     </p>
-                                    <a href="#" class="mt-2 block">
+                                    <a href="#" class="block mt-2">
                                         <p class="text-xl font-semibold text-gray-900">
                                             {{page.head.title}}
                                         </p>
