link from title

--- a/templates/index.hbs
+++ b/templates/index.hbs
@@ -28,7 +28,7 @@
                                     <p class="text-sm text-gray-500">
                                         <time datetime="2020-03-10">Mar 11, 2020</time>
                                     </p>
-                                    <a href="#" class="block mt-2">
+                                    <a href="{{this.uri}}" class="block mt-2">
                                         <p class="text-xl font-semibold text-gray-900">
                                             {{page.head.title}}
                                         </p>
